tests/snapshots/snapshots__budget_ky_2000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 (2027 tokens)

package.json

readme.md
    20→## Benefits over plain `fetch`
    33→## Install
    39→###### CDN
    45→## Usage
    85→## API
   342→###### hooks.beforeRequest
   373→###### hooks.beforeRetry
   446→###### hooks.beforeError
   485→###### hooks.afterResponse
  1050→## Tips
  1292→## FAQ
  1339→## Browser support
  1343→## Node.js support
  1347→## Related
  1352→## Maintainers

source/core/Ky.ts
    33→export class Ky {
    34→	static create(input: Input, options: Options): ResponsePromise {
    35→		const ky = new Ky(input, options);
    36→
      →…
   200→	constructor(input: Input, options: Options = {}) {
   201→		this.#input = input;
   202→
      →…

source/core/constants.ts
     1→import type {Expect, Equal} from '@type-challenges/utils';
    66→Options for forcing a retry via `ky.retry()`.
    68→export type ForceRetryOptions = {
    69→	/**
      →	…
   146→Marker returned by ky.retry() to signal a forced retry from afterResponse hooks.
   148→export class RetryMarker {
   149→	constructor(public options?: ForceRetryOptions) {}
   153→Force a retry from an `afterResponse` hook.
   154→
   155→This allows you to retry a request based on the response content, even if the response has a successful status code. The retry will respect the `retry.limit` option and skip the `shouldRetry` check. The forced retry is observable in `beforeRetry` hooks, where the error will be a `ForceRetryError`.
   156→
   157→@param options - Optional configuration for the retry.
   158→
   159→@example
   160→```
   161→import ky, {isForceRetryError} from 'ky';
   162→
   163→const api = ky.extend({
   164→	hooks: {
   165→		afterResponse: [
   166→			async (request, options, response) => {
      →			…
   235→export const retry = (options?: ForceRetryOptions) => new RetryMarker(options);

source/errors/ForceRetryError.ts
     1→import type {ForceRetryOptions} from '../core/constants.js';
     2→import {NonError} from './NonError.js';
     5→Internal error used to signal a forced retry from afterResponse hooks.
     6→This is thrown when a user returns ky.retry() from an afterResponse hook.
     8→export class ForceRetryError extends Error {
     9→	override name = 'ForceRetryError' as const;
    10→	customDelay: number | undefined;
    11→	code: string | undefined;
    12→	customRequest: Request | undefined;
    13→
    14→	constructor(options?: ForceRetryOptions) {

source/errors/HTTPError.ts
     1→import type {NormalizedOptions} from '../types/options.js';
     2→import type {KyRequest} from '../types/request.js';
     3→import type {KyResponse} from '../types/response.js';
     5→export class HTTPError<T = unknown> extends Error {
     6→	public response: KyResponse<T>;
     7→	public request: KyRequest;
     8→	public options: NormalizedOptions;
     9→
    10→	constructor(response: Response, request: Request, options: NormalizedOptions) {

source/errors/NonError.ts
     2→Wrapper for non-Error values that were thrown.
     3→
     4→In JavaScript, any value can be thrown (not just Error instances). This class wraps such values to ensure consistent error handling.
     6→export class NonError extends Error {
     7→	override name = 'NonError';
     8→	readonly value: unknown;
     9→
    10→	constructor(value: unknown) {

source/errors/TimeoutError.ts
     1→import type {KyRequest} from '../types/request.js';
     3→export class TimeoutError extends Error {
     4→	public request: KyRequest;
     5→
     6→	constructor(request: Request) {

source/index.ts
     3→import {Ky} from './core/Ky.js';
     4→import {requestMethods, stop, retry} from './core/constants.js';
     5→import type {KyInstance} from './types/ky.js';
     6→import type {Input, Options} from './types/options.js';
     7→import {validateAndMerge} from './utils/merge.js';
     8→import {type Mutable} from './utils/types.js';
    10→const createInstance = (defaults?: Partial<Options>): KyInstance => {
    34→const ky = createInstance();

source/types/ResponsePromise.ts
     4→import {type KyResponse} from './response.js';

source/types/common.ts

source/types/hooks.ts

source/types/ky.ts

source/types/options.ts
    30→Custom Ky options
    33→export type KyOptions = {
    34→	/**
      →	…
   303→Each key from KyOptions is present and set to `true`.
   304→
   305→This type is used for identifying and working with the known keys in KyOptions.
   307→export type KyOptionsRegistry = {[K in keyof KyOptions]-?: true};
   312→export interface Options extends KyOptions, Omit<RequestInit, 'headers'> { // eslint-disable-line @typescript-eslint/consistent-type-definitions -- This must stay an interface so that it can be extended outside of Ky for use in `ky.create`.
   313→	/**
   314→	HTTP method used to make the request.
   315→
   316→	Internally, the standard methods (`GET`, `POST`, `PUT`, `PATCH`, `HEAD` and `DELETE`) are uppercased in order to avoid server errors due to case sensitivity.
   317→	*/
   318→	method?: LiteralUnion<HttpMethod, string>;
   319→
   320→	/**
      →	…
   373→export interface NormalizedOptions extends RequestInit { // eslint-disable-line @typescript-eslint/consistent-type-definitions -- This must stay an interface so that it can be extended outside of Ky for use in `ky.create`.
   374→	// Extended from `RequestInit`, but ensured to be set (not optional).
   375→	method: NonNullable<RequestInit['method']>;
   376→	credentials?: NonNullable<RequestInit['credentials']>;
   377→
   378→	// Extended from custom `KyOptions`, but ensured to be set (not optional).
   379→	retry: RetryOptions;
   380→	prefixUrl: string;
   381→	onDownloadProgress: Options['onDownloadProgress'];
      →	…

source/types/request.ts

source/types/response.ts

source/types/retry.ts

source/utils/body.ts
    57→const withProgress …

source/utils/delay.ts
     5→export type DelayOptions = {

source/utils/is.ts

source/utils/merge.ts
    32→function newHookValue …
    47→const appendSearchParameters …

source/utils/normalize.ts
     8→const retryMethods …
    10→const retryStatusCodes …
    12→const retryAfterStatusCodes …
    14→type InternalRetryOptions …
    16→const defaultRetryOptions …

source/utils/options.ts

source/utils/timeout.ts
     3→export type TimeoutOptions = {

source/utils/type-guards.ts
     6→Type guard to check if an error is a Ky error.
     7→
      →…
    27→export function isKyError(error: unknown): error is HTTPError | TimeoutError | ForceRetryError {
    32→Type guard to check if an error is an HTTPError.
    33→
      →…
    49→export function isHTTPError<T = unknown>(error: unknown): error is HTTPError<T> {
    54→Type guard to check if an error is a TimeoutError.
    55→
      →…
    71→export function isTimeoutError(error: unknown): error is TimeoutError {
    76→Type guard to check if an error is a ForceRetryError.
    77→
      →…
    98→export function isForceRetryError(error: unknown): error is ForceRetryError {

source/utils/types.ts
     1→export type Mutable<T> = {
     5→export type ObjectEntries<T> = T extends ArrayLike<infer U>
     6→	? Array<[string, U]>
     7→	: Array<{[K in keyof T]: [K, T[K]]}[keyof T]>;

test/browser.ts
    13→	interface Window {

test/helpers/create-http-test-server.ts
     7→export type HttpServerOptions = {
    11→export type ExtendedHttpTestServer = {

tsconfig.dist.json

tsconfig.json
