tests/snapshots/snapshots__budget_ky_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (4015 tokens)

package.json
     2→	"name": "ky",
     3→	"version": "1.14.3",
     4→	"description": "Tiny and elegant HTTP client based on the Fetch API",
     5→	"license": "MIT",
     6→	"repository": "sindresorhus/ky",
     7→	"funding": "https://github.com/sindresorhus/ky?sponsor=1",
     8→	"author": {
    13→	"type": "module",
    14→	"exports": {
    18→	"main": "./distribution/index.js",
    19→	"types": "./distribution/index.d.ts",
    20→	"sideEffects": false,
    21→	"engines": {
    24→	"scripts": {
    31→	"files": [
    34→	"keywords": [
    56→	"devDependencies": {
    78→	"xo": {
    94→	"ava": {
   103→	"nyc": {

readme.md
    20→## Benefits over plain `fetch`
    33→## Install
    39→###### CDN
    45→## Usage
    85→## API
    87→### ky(input, options?)
   122→### ky.get(input, options?)
   123→### ky.post(input, options?)
   124→### ky.put(input, options?)
   125→### ky.patch(input, options?)
   126→### ky.head(input, options?)
   127→### ky.delete(input, options?)
   133→#### input
   141→#### options
   147→##### method
   156→##### json
   162→##### searchParams
   173→##### prefixUrl
   197→##### retry
   327→##### timeout
   335→##### hooks
   342→###### hooks.beforeRequest
   373→###### hooks.beforeRetry
   446→###### hooks.beforeError
   485→###### hooks.afterResponse
   553→##### throwHttpErrors
   566→##### onDownloadProgress
   592→##### onUploadProgress
   619→##### parseJson
   639→##### stringifyJson
   664→##### fetch
   683→##### context
   745→### ky.extend(defaultOptions)
   811→### ky.create(defaultOptions)
   829→#### defaultOptions
   833→### ky.stop
   864→### ky.retry(options?)
   870→#### options
   874→##### delay
   882→##### code
   895→##### cause
   913→##### request
   923→#### Example
  1000→### HTTPError
  1046→### TimeoutError
  1050→## Tips
  1052→### Sending form data
  1080→#### Modifying FormData in hooks
  1109→### Setting a custom `Content-Type`
  1129→### Cancellation
  1156→### Proxy support (Node.js)
  1158→#### Native proxy support
  1177→#### Using ProxyAgent
  1209→### HTTP/2 support (Node.js)
  1249→### Consuming Server-Sent Events (SSE)
  1264→### Extending types
  1292→## FAQ
  1294→#### How do I use this in Node.js?
  1298→#### How do I use this with a web app (React, Vue.js, etc.) that uses server-side rendering (SSR)?
  1302→#### How do I test a browser library that uses this?
  1306→#### How do I use this without a bundler like Webpack?
  1321→#### How is it different from [`got`](https://github.com/sindresorhus/got)
  1325→#### How is it different from [`axios`](https://github.com/axios/axios)?
  1329→#### How is it different from [`r2`](https://github.com/mikeal/r2)?
  1333→#### What does `ky` mean?
  1339→## Browser support
  1343→## Node.js support
  1347→## Related
  1352→## Maintainers

source/core/Ky.ts
    33→export class Ky {
    34→	static create(input: Input, options: Options): ResponsePromise {
   200→	constructor(input: Input, options: Options = {}) {

source/core/constants.ts
     2→import {type KyOptionsRegistry, type RequestHttpMethod} from '../types/options.js';
     4→export const supportsRequestStreams = (() => {
    34→export const supportsAbortController = typeof globalThis.AbortController === 'function';
    35→export const supportsAbortSignal = typeof globalThis.AbortSignal === 'function' && typeof globalThis.AbortSignal.any === 'function';
    36→export const supportsResponseStreams = typeof globalThis.ReadableStream === 'function';
    37→export const supportsFormData = typeof globalThis.FormData === 'function';
    39→export const requestMethods = ['get', 'post', 'put', 'patch', 'head', 'delete'] as const;
    41→const validate …
    46→export const responseTypes = {
    58→export const maxSafeTimeout = 2_147_483_647;
    61→export const usualFormBoundarySize = new TextEncoder().encode('------WebKitFormBoundaryaxpyiPgbbPti10Rw').length;
    63→export const stop = Symbol('stop');
    66→Options for forcing a retry via `ky.retry()`.
    68→export type ForceRetryOptions = {
    69→	/**
      →	…
   146→Marker returned by ky.retry() to signal a forced retry from afterResponse hooks.
   148→export class RetryMarker {
   149→	constructor(public options?: ForceRetryOptions) {}
   153→Force a retry from an `afterResponse` hook.
   154→
      →…
   235→export const retry = (options?: ForceRetryOptions) => new RetryMarker(options);
   237→export const kyOptionKeys: KyOptionsRegistry = {
   256→export const vendorSpecificOptions = {
   265→export const requestOptionsRegistry = {

source/errors/ForceRetryError.ts
     1→import type {ForceRetryOptions} from '../core/constants.js';
     2→import {NonError} from './NonError.js';
     5→Internal error used to signal a forced retry from afterResponse hooks.
      →…
     8→export class ForceRetryError extends Error {
     9→	override name = 'ForceRetryError' as const;
    10→	customDelay: number | undefined;
    11→	code: string | undefined;
    12→	customRequest: Request | undefined;
    13→
    14→	constructor(options?: ForceRetryOptions) {

source/errors/HTTPError.ts
     1→import type {NormalizedOptions} from '../types/options.js';
     2→import type {KyRequest} from '../types/request.js';
     3→import type {KyResponse} from '../types/response.js';
     5→export class HTTPError<T = unknown> extends Error {
     6→	public response: KyResponse<T>;
     7→	public request: KyRequest;
     8→	public options: NormalizedOptions;
     9→
    10→	constructor(response: Response, request: Request, options: NormalizedOptions) {

source/errors/NonError.ts
     2→Wrapper for non-Error values that were thrown.
     3→
      →…
     6→export class NonError extends Error {
     7→	override name = 'NonError';
     8→	readonly value: unknown;
     9→
    10→	constructor(value: unknown) {

source/errors/TimeoutError.ts
     1→import type {KyRequest} from '../types/request.js';
     3→export class TimeoutError extends Error {
     4→	public request: KyRequest;
     5→
     6→	constructor(request: Request) {

source/index.ts
     3→import {Ky} from './core/Ky.js';
     4→import {requestMethods, stop, retry} from './core/constants.js';
     5→import type {KyInstance} from './types/ky.js';
     6→import type {Input, Options} from './types/options.js';
     7→import {validateAndMerge} from './utils/merge.js';
     8→import {type Mutable} from './utils/types.js';
    10→const createInstance = (defaults?: Partial<Options>): KyInstance => {
    34→const ky = createInstance();

source/types/ResponsePromise.ts
     4→import {type KyResponse} from './response.js';
     6→export type ResponsePromise<T = unknown> = {

source/types/common.ts
     2→export type Primitive = null | undefined | string | number | boolean | symbol | bigint;
     4→export type Required<T, K extends keyof T = keyof T> = T & {[P in K]-?: T[P]};
     6→export type LiteralUnion<LiteralType extends BaseType, BaseType extends Primitive> =
     7→	| LiteralType
     8→	| (BaseType & {_?: never});

source/types/hooks.ts
     1→import {type stop, type RetryMarker} from '../core/constants.js';
     2→import type {KyRequest, KyResponse, HTTPError} from '../index.js';
     3→import type {NormalizedOptions} from './options.js';
     5→export type BeforeRequestState = {
    14→export type BeforeRequestHook = (
    15→	request: KyRequest,
    16→	options: NormalizedOptions,
    17→	state: BeforeRequestState
    18→) => Request | Response | void | Promise<Request | Response | void>;
    20→export type BeforeRetryState = {
    30→export type BeforeRetryHook = (options: BeforeRetryState) => Request | Response | typeof stop | void | Promise<Request | Response | typeof stop | void>;
    32→export type AfterResponseState = {
    41→export type AfterResponseHook = (
    42→	request: KyRequest,
    43→	options: NormalizedOptions,
    44→	response: KyResponse,
    45→	state: AfterResponseState
    46→) => Response | RetryMarker | void | Promise<Response | RetryMarker | void>;
    48→export type BeforeErrorState = {
    57→export type BeforeErrorHook = (error: HTTPError, state: BeforeErrorState) => HTTPError | Promise<HTTPError>;
    59→export type Hooks = {

source/types/ky.ts
     1→import {type stop, type retry} from '../core/constants.js';
     2→import type {Input, Options} from './options.js';
     3→import type {ResponsePromise} from './ResponsePromise.js';
     5→export type KyInstance = {

source/types/options.ts
     1→import type {LiteralUnion, Required} from './common.js';
     2→import type {Hooks} from './hooks.js';
     3→import type {RetryOptions} from './retry.js';
     6→export type SearchParamsInit = string | string[][] | Record<string, string> | URLSearchParams | undefined;
     9→export type SearchParamsOption = SearchParamsInit | Record<string, string | number | boolean | undefined> | Array<Array<string | number | boolean>>;
    11→export type RequestHttpMethod = 'get' | 'post' | 'put' | 'patch' | 'head' | 'delete';
    12→export type HttpMethod = LiteralUnion<RequestHttpMethod | 'options' | 'trace', string>;
    14→export type Input = string | URL | Request;
    16→export type Progress = {
    27→export type KyHeadersInit = NonNullable<RequestInit['headers']> | Record<string, string | undefined>;
    30→Custom Ky options
    33→export type KyOptions = {
   303→Each key from KyOptions is present and set to `true`.
   304→
      →…
   307→export type KyOptionsRegistry = {[K in keyof KyOptions]-?: true};
   312→export interface Options extends KyOptions, Omit<RequestInit, 'headers'> { // eslint-disable-line @typescript-eslint/consistent-type-definitions -- This must stay an interface so that it can be extended outside of Ky for use in `ky.create`.
   313→	/**
      →	…
   358→export type InternalOptions = Required<
   359→Omit<Options, 'hooks' | 'retry' | 'context' | 'throwHttpErrors'>,
   360→'fetch' | 'prefixUrl' | 'timeout'
   361→> & {
   373→export interface NormalizedOptions extends RequestInit { // eslint-disable-line @typescript-eslint/consistent-type-definitions -- This must stay an interface so that it can be extended outside of Ky for use in `ky.create`.
   374→	// Extended from `RequestInit`, but ensured to be set (not optional).
      →	…

source/types/request.ts
     1→export type KyRequest<T = unknown> = {

source/types/response.ts
     1→export type KyResponse<T = unknown> = {

source/types/retry.ts
     1→import type {HttpMethod} from './options.js';
     3→export type ShouldRetryState = {
    15→export type RetryOptions = {

source/utils/body.ts
     1→import type {Options} from '../types/options.js';
     2→import {usualFormBoundarySize} from '../core/constants.js';
     5→export const getBodySize = (body?: BodyInit | null): number => {
    57→const withProgress …
    90→export const streamResponse = (response: Response, onDownloadProgress: Options['onDownloadProgress']) => {
   119→export const streamRequest = (request: Request, onUploadProgress: Options['onUploadProgress'], originalBody?: BodyInit | null) => {

source/utils/delay.ts
     3→import {type InternalOptions} from '../types/options.js';
     5→export type DelayOptions = {
     9→export default async function delay …

source/utils/is.ts
     2→export const isObject = (value: unknown): value is object => value !== null && typeof value === 'object';

source/utils/merge.ts
     1→import type {KyHeadersInit, Options} from '../types/options.js';
     2→import type {Hooks} from '../types/hooks.js';
     3→import {supportsAbortSignal} from '../core/constants.js';
     4→import {isObject} from './is.js';
     6→export const validateAndMerge = (...sources: Array<Partial<Options> | undefined>): Partial<Options> => {
    16→export const mergeHeaders = (source1: KyHeadersInit = {}, source2: KyHeadersInit = {}) => {
    32→function newHookValue …
    38→export const mergeHooks = (original: Hooks = {}, incoming: Hooks = {}): Required<Hooks> => (
    39→	{
    47→const appendSearchParameters …
    86→export const deepMerge = <T>(...sources: Array<Partial<T> | undefined>): T => {

source/utils/normalize.ts
     1→import {requestMethods} from '../core/constants.js';
     2→import type {RetryOptions} from '../types/retry.js';
     3→import type {HttpMethod, RequestHttpMethod} from '../types/options.js';
     5→export const normalizeRequestMethod = (input: string): string =>
     6→	requestMethods.includes(input as RequestHttpMethod) ? input.toUpperCase() : input;
     8→const retryMethods …
    10→const retryStatusCodes …
    12→const retryAfterStatusCodes …
    14→type InternalRetryOptions …
    16→const defaultRetryOptions …
    28→export const normalizeRetryOptions = (retry: number | RetryOptions = {}): InternalRetryOptions => {

source/utils/options.ts
     1→import {kyOptionKeys, requestOptionsRegistry, vendorSpecificOptions} from '../core/constants.js';
     2→import type {SearchParamsOption} from '../types/options.js';
     4→export const findUnknownOptions = (
     5→	request: Request,
     6→	options: Record<string, unknown>,
     7→): Record<string, unknown> => {
    30→export const hasSearchParameters = (search: SearchParamsOption): boolean => {

source/utils/timeout.ts
     1→import {TimeoutError} from '../errors/TimeoutError.js';
     3→export type TimeoutOptions = {
     9→export default async function timeout …

source/utils/type-guards.ts
     1→import {HTTPError} from '../errors/HTTPError.js';
     2→import {TimeoutError} from '../errors/TimeoutError.js';
     3→import {ForceRetryError} from '../errors/ForceRetryError.js';
    27→export function isKyError(error: unknown): error is HTTPError | TimeoutError | ForceRetryError {
    49→export function isHTTPError<T = unknown>(error: unknown): error is HTTPError<T> {
    71→export function isTimeoutError(error: unknown): error is TimeoutError {
    98→export function isForceRetryError(error: unknown): error is ForceRetryError {

source/utils/types.ts
     1→export type Mutable …
     5→export type ObjectEntries …

tsconfig.dist.json
     2→	"extends": "./tsconfig",
     3→	"compilerOptions": {
     8→	},
     9→	"include": [
    11→	]
    12→}

tsconfig.json
     2→	"extends": "@sindresorhus/tsconfig",
     3→	"compilerOptions": {
     5→	},
     6→	"include": [
     8→	]
     9→}
