tests/snapshots/snapshots__budget_ky_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (485 words)

readme.md
    20→## Benefits over plain `fetch` …
    33→## Install …
    39→###### CDN …
    45→## Usage …
    85→## API …
    87→### ky(input, options?) …
   123→### ky.post(input, options?) …
   124→### ky.put(input, options?) …
   125→### ky.patch(input, options?) …
   126→### ky.head(input, options?) …
   127→### ky.delete(input, options?) …
   342→###### hooks.beforeRequest …
   373→###### hooks.beforeRetry …
   446→###### hooks.beforeError …
   485→###### hooks.afterResponse …
  1050→## Tips …
  1052→### Sending form data …
  1158→#### Native proxy support
  1160→Node.js 24.5+ supports automatic proxy configuration via environment variables. Set `NODE_USE_ENV_PROXY=1` or use the `--use-env-proxy` CLI flag.
  1161→
  1162→```sh
  1163→NODE_USE_ENV_PROXY=1 HTTP_PROXY=http://proxy.example.com:8080 node app.js
  1164→```
  1165→
  1166→Or:
  1167→
  1168→```sh
  1169→node --use-env-proxy app.js
  1170→```
      →…
  1292→## FAQ …
  1294→#### How do I use this in Node.js?
  1296→Node.js 18 and later supports `fetch` natively, so you can just use this package directly.
  1297→
  1339→## Browser support …
  1343→## Node.js support …
  1347→## Related …
  1352→## Maintainers …
source/core/Ky.ts
    33→export class Ky {
    34→	static create(input: Input, options: Options): ResponsePromise {
    35→		const ky = new Ky(input, options);
    36→
   200→	constructor(input: Input, options: Options = {}) {
source/core/constants.ts
    68→export type ForceRetryOptions …
   145→/**
   146→Marker returned by ky.retry() to signal a forced retry from afterResponse hooks.
   147→*/
   148→export class RetryMarker {
   149→	constructor(public options?: ForceRetryOptions) {}
   150→}
   152→/**
   153→Force a retry from an `afterResponse` hook.
   154→
      →…
   235→export const retry = (options?: ForceRetryOptions) => new RetryMarker(options);
source/errors/ForceRetryError.ts
     8→export class ForceRetryError extends Error {
     9→	override name = 'ForceRetryError' as const;
    10→	customDelay: number | undefined;
    11→	code: string | undefined;
    14→	constructor(options?: ForceRetryOptions) {
source/errors/HTTPError.ts
     5→export class HTTPError<T = unknown> extends Error {
     6→	public response: KyResponse<T>;
     7→	public request: KyRequest;
    10→	constructor(response: Response, request: Request, options: NormalizedOptions) {
source/errors/NonError.ts
     6→export class NonError extends Error {
     7→	override name = 'NonError';
     8→	readonly value: unknown;
     9→
    10→	constructor(value: unknown) {
source/errors/TimeoutError.ts
     3→export class TimeoutError extends Error {
     4→	public request: KyRequest;
     5→
     6→	constructor(request: Request) {
source/index.ts
    10→const createInstance = (defaults?: Partial<Options>): KyInstance => {
    34→const ky = createInstance();
source/types/options.ts
    33→export type KyOptions …
   307→export type KyOptionsRegistry …
   312→export interface Options extends KyOptions, Omit<RequestInit, 'headers'> { // eslint-disable-line @typescript-eslint/consistent-type-definitions -- This must stay an interface so that it can be extended outside of Ky for use in `ky.create`.
   313→	/**
   314→	HTTP method used to make the request.
   315→
      →…
   373→export interface NormalizedOptions extends RequestInit { // eslint-disable-line @typescript-eslint/consistent-type-definitions -- This must stay an interface so that it can be extended outside of Ky for use in `ky.create`.
   374→	// Extended from `RequestInit`, but ensured to be set (not optional).
   375→	method: NonNullable<RequestInit['method']>;
   376→	credentials?: NonNullable<RequestInit['credentials']>;
      →…
source/utils/delay.ts
     5→export type DelayOptions …
source/utils/timeout.ts
     3→export type TimeoutOptions …
source/utils/type-guards.ts
     5→/**
      →…
    27→export function isKyError(error: unknown): error is HTTPError | TimeoutError | ForceRetryError {
    31→/**
      →…
    49→export function isHTTPError<T = unknown>(error: unknown): error is HTTPError<T> {
    53→/**
      →…
    71→export function isTimeoutError(error: unknown): error is TimeoutError {
    75→/**
      →…
    98→export function isForceRetryError(error: unknown): error is ForceRetryError {
source/utils/types.ts
     1→export type Mutable …
     5→export type ObjectEntries …
