tests/snapshots/snapshots__budget_ky_errors_subdir1.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 5 → level 0 (4 words)

ForceRetryError.ts
HTTPError.ts
NonError.ts
TimeoutError.ts
