tests/snapshots/snapshots__budget_ky_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 10 → level 0 (24 words)

core/Ky.ts
core/constants.ts
errors/ForceRetryError.ts
errors/HTTPError.ts
errors/NonError.ts
errors/TimeoutError.ts
index.ts
types/ResponsePromise.ts
types/common.ts
types/hooks.ts
types/ky.ts
types/options.ts
types/request.ts
types/response.ts
types/retry.ts
utils/body.ts
utils/delay.ts
utils/is.ts
utils/merge.ts
utils/normalize.ts
utils/options.ts
utils/timeout.ts
utils/type-guards.ts
utils/types.ts
