tests/snapshots/snapshots__budget_ky_root_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 30 → level 0 (25 words)

readme.md
source/core/Ky.ts
source/core/constants.ts
source/errors/ForceRetryError.ts
source/errors/HTTPError.ts
source/errors/NonError.ts
source/errors/TimeoutError.ts
source/index.ts
source/types/ResponsePromise.ts
source/types/common.ts
source/types/hooks.ts
source/types/ky.ts
source/types/options.ts
source/types/request.ts
source/types/response.ts
source/types/retry.ts
source/utils/body.ts
source/utils/delay.ts
source/utils/is.ts
source/utils/merge.ts
source/utils/normalize.ts
source/utils/options.ts
source/utils/timeout.ts
source/utils/type-guards.ts
source/utils/types.ts
